Fixed issue with Org Access Manager not seeing industry teams.